# coffee-bot

./: Cargo.toml
scripts/: upload.sh
src/: main.rs
